@@ -1,0 +1,9 @@
+{
+	"version": 1,
+	"maxHP": 20,
+	"imageData": {
+		"image": "./skeleton.png",
+		"width": 32,
+		"height": 64
+	}
+}
